Finish cc::Animation when blink::Animation is no longer current.

Rather than relying on AnimateLayers to detect finished animations, the blink
animation can notify its corresponding cc animation when the current state
changes.

Bug: 891141
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ifca9853512c30585ae45cf68f73718eb274c656e
Reviewed-on: https://chromium-review.googlesource.com/c/1270528
Commit-Queue: Robert Flack <flackr@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598524}
Former-commit-id: c1f279e1d7037c566b59251909e82db2f59e9da1